Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-6802

sanity test_208 fail: “lease not broken over recovery"

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Critical Critical
    • Lustre 2.8.0
    • Lustre 2.8.0
    • None
    • Autotest
    • 3
    • 9223372036854775807

      sanity test 208 is failing occasionally. From the test_log:

      ==== test 5: lease broken can't be regained by replay
      multiop: apply lease error: Device or resource busy
      Failing mds1 on shadow-17vm12
      …
      shadow-17vm2: mdc.lustre-MDT0000-mdc-*.mds_server_uuid in FULL state after 9 sec
      shadow-17vm5: mdc.lustre-MDT0000-mdc-*.mds_server_uuid in FULL state after 9 sec
      /usr/lib64/lustre/tests/sanity.sh: line 11648: kill: (19839) - No such process
       sanity test_208: @@@@@@ FAIL: lease not broken over recovery 
      

      Test logs for this failure and past failures are at:
      2015-07-03 01:45:25 - https://testing.hpdd.intel.com/test_sets/0965361e-213f-11e5-a388-5254006e85c2
      2015-07-03 03:06:42 - https://testing.hpdd.intel.com/test_sets/a04d4718-214b-11e5-bb73-5254006e85c2
      2015-07-03 16:23:00 - https://testing.hpdd.intel.com/test_sets/38d9e8f0-21de-11e5-a388-5254006e85c2
      2015-07-03 18:18:18 - https://testing.hpdd.intel.com/test_sets/b163f5f2-21ef-11e5-a388-5254006e85c2
      2015-07-04 19:45:45 - https://testing.hpdd.intel.com/test_sets/2e5a5992-2372-11e5-aced-5254006e85c2
      2015-07-05 12:09:44 - https://testing.hpdd.intel.com/test_sets/86e51cfa-234a-11e5-9feb-5254006e85c2
      2015-07-05 15:22:59 - https://testing.hpdd.intel.com/test_sets/a26fb9a2-2341-11e5-aced-5254006e85c2
      2015-07-05 15:58:01 - https://testing.hpdd.intel.com/test_sets/04aecbb8-236e-11e5-9feb-5254006e85c2

            jay Jinshan Xiong (Inactive)
            jamesanunez James Nunez (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            13 Start watching this issue

              Created:
              Updated:
              Resolved: